--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aora",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,12 +10,19 @@
   },
   "dependencies": {
     "expo": "~52.0.11",
+    "expo-constants": "~17.0.3",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.9",
     "expo-status-bar": "~2.0.0",
+    "nativewind": "^2.0.11",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.1.0",
+    "expo-font": "~13.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
