--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "dependencies": {
     "expo": "~52.0.11",
     "expo-constants": "~17.0.3",
+    "expo-font": "~13.0.1",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.9",
     "expo-status-bar": "~2.0.0",
     "nativewind": "^2.0.11",
     "react": "18.3.1",
+    "react-native-appwrite": "^0.5.0",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
-    "expo-font": "~13.0.1"
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
