--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "expo": "~52.0.11",
+    "expo-av": "^15.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.3",
@@ -17,6 +18,7 @@
     "expo-status-bar": "~2.0.0",
     "nativewind": "^2.0.11",
     "react": "18.3.1",
+    "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.5.0",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
